Make host-specific Makefile and add color file to *.dtx.
- Make the Makefile building all the files of the iis beamer class host-specific such that I can run them on both a Unix environment and an cygwin environment on Windows.
- Add the beamercolorthemeiis.sty content to the *.dtx file such that it gets generated out of the *.dtx file.

--- a/new/Makefile
+++ b/new/Makefile
@@ -1,29 +1,46 @@
-SRC = beamerthemeiis
-
+SRC    = beamerthemeiis
 TEXVER = 2011
+VIEWER = okular
 
-VIEWBIN = okular
+## Determine the host the Makefile is running on.
+HOST = $(shell hostname)
+
+## Determine the path to the pdflatex binary depending on the current host.
+ifeq ($(HOST),muem_mobile)
+  ## Path to the latex/pdflatex binary for my cygwin installation on my laptop.
+  LATEX_BIN     = "/cygdrive/c/Program Files/MiKTeX 2.9/miktex/bin/x64/latex.exe"
+	PDFLATEX_BIN  = "/cygdrive/c/Program Files/MiKTeX 2.9/miktex/bin/x64/pdflatex.exe"
+  MAKEINDEX_BIN = "/cygdrive/c/Program Files/MiKTeX 2.9/miktex/bin/x64/makeindex.exe"
+else
+  ## Otherwise we assume that we are running this Makefile on my work PC.
+  LATEX_BIN     = latex-$(TEXVER)
+  PDFLATEX_BIN  = pdflatex-$(TEXVER)
+  MAKEINDEX_BIN = makeindex-$(TEXVER)
+endif
+
+## Determine the host the Makefile is running on.
+HOST = $(shell hostname)
 
 all: sty doc
 
 $(SRC).sty: $(SRC).dtx $(SRC).dtx
-	@latex-$(TEXVER) $(SRC).ins
+	@$(LATEX_BIN) $(SRC).ins
 
 $(SRC).pdf: $(SRC).dtx
-	@pdflatex-$(TEXVER) $(SRC).dtx
+	@$(PDFLATEX_BIN) $(SRC).dtx
 
 sty: $(SRC).sty
 
 doc: $(SRC).pdf
 
 history: $(SRC).dtx
-	@makeindex-$(TEXVER) -s gglo.ist -o $(SRC).gls $(SRC).glo
+	@$(MAKEINDEX_BIN) -s gglo.ist -o $(SRC).gls $(SRC).glo
 
 index: $(SRC.dtx)
-	@makeindex-$(TEXVER) -s gind.ist -o $(SRC).ind $(SRC).idx
+	@$(MAKEINDEX_BIN) -s gind.ist -o $(SRC).ind $(SRC).idx
 
 view:
-	$(VIEWBIN) $(SRC).pdf &
+	$(VIEWER) $(SRC).pdf &
 
 clean:
 	@rm -f *.log *~ *.aux *.glo *.gls *.idx *.ilg *.ind
